Support removing SpX port assignments
