# bindings/go/temporal/model_sp_x_overlay_assignment_input.go
@@ -24,8 +24,8 @@ type SpXOverlayAssignmentInput struct {
 	Device Device1 `json:"device"`
 	// Tag identifying the namespace used for allocation.
 	NamespaceTag *string `json:"namespace_tag,omitempty"`
-	// Identifier of the SpX overlay whose VRF will be assigned to the device and ports.
-	OverlayId string `json:"overlay_id"`
+	// Identifier of the SpX overlay whose VRF will be assigned to the device and ports. Omit it to remove the selected ports' current SpX assignment.
+	OverlayId NullableString `json:"overlay_id,omitempty"`
 	// Names of the device interfaces to assign to the overlay.
 	PortNames []string `json:"port_names"`
 	// Site containing the target network device.
@@ -38,12 +38,11 @@ type _SpXOverlayAssignmentInput SpXOverlayAssignmentInput
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewSpXOverlayAssignmentInput(device Device1, overlayId string, portNames []string, site string) *SpXOverlayAssignmentInput {
+func NewSpXOverlayAssignmentInput(device Device1, portNames []string, site string) *SpXOverlayAssignmentInput {
 	this := SpXOverlayAssignmentInput{}
 	this.Device = device
 	var namespaceTag string = "spectrumx"
 	this.NamespaceTag = &namespaceTag
-	this.OverlayId = overlayId
 	this.PortNames = portNames
 	this.Site = site
 	return &this
@@ -116,28 +115,49 @@ func (o *SpXOverlayAssignmentInput) SetNamespaceTag(v string) {
 	o.NamespaceTag = &v
 }
 
-// GetOverlayId returns the OverlayId field value
+// GetOverlayId returns the OverlayId field value if set, zero value otherwise (both if not set or set to explicit null).
 func (o *SpXOverlayAssignmentInput) GetOverlayId() string {
-	if o == nil {
+	if o == nil || IsNil(o.OverlayId.Get()) {
 		var ret string
 		return ret
 	}
-
-	return o.OverlayId
+	return *o.OverlayId.Get()
 }
 
-// GetOverlayIdOk returns a tuple with the OverlayId field value
+// GetOverlayIdOk returns a tuple with the OverlayId field value if set, nil otherwise
 // and a boolean to check if the value has been set.
+
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+
 func (o *SpXOverlayAssignmentInput) GetOverlayIdOk() (*string, bool) {
 	if o == nil {
 		return nil, false
 	}
-	return &o.OverlayId, true
+	return o.OverlayId.Get(), o.OverlayId.IsSet()
 }
 
-// SetOverlayId sets field value
+// HasOverlayId returns a boolean if a field has been set.
+func (o *SpXOverlayAssignmentInput) HasOverlayId() bool {
+	if o != nil && o.OverlayId.IsSet() {
+		return true
+	}
+
+	return false
+}
+
+// SetOverlayId gets a reference to the given NullableString and assigns it to the OverlayId field.
 func (o *SpXOverlayAssignmentInput) SetOverlayId(v string) {
-	o.OverlayId = v
+	o.OverlayId.Set(&v)
+}
+
+// SetOverlayIdNil sets the value for OverlayId to be an explicit nil
+func (o *SpXOverlayAssignmentInput) SetOverlayIdNil() {
+	o.OverlayId.Set(nil)
+}
+
+// UnsetOverlayId ensures that no value is present for OverlayId, not even an explicit nil
+func (o *SpXOverlayAssignmentInput) UnsetOverlayId() {
+	o.OverlayId.Unset()
 }
 
 // GetPortNames returns the PortNames field value
@@ -202,7 +222,9 @@ func (o SpXOverlayAssignmentInput) ToMap() (map[string]interface{}, error) {
 	if !IsNil(o.NamespaceTag) {
 		toSerialize["namespace_tag"] = o.NamespaceTag
 	}
-	toSerialize["overlay_id"] = o.OverlayId
+	if o.OverlayId.IsSet() {
+		toSerialize["overlay_id"] = o.OverlayId.Get()
+	}
 	toSerialize["port_names"] = o.PortNames
 	toSerialize["site"] = o.Site
 	return toSerialize, nil
@@ -214,7 +236,6 @@ func (o *SpXOverlayAssignmentInput) UnmarshalJSON(data []byte) (err error) {
 	// that every required field exists as a key in the generic map.
 	requiredProperties := map[string]bool{
 		"device":     false,
-		"overlay_id": false,
 		"port_names": false,
 		"site":       false,
 	}
